<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back01"
    android:layout_height="match_parent"
    android:id="@+id/loginactivityid"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/toolbarid"
        android:background="@drawable/shape_toolbar2"

        >
        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/iconId"
            android:src="@drawable/icon2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iconId"
            android:layout_marginTop="10dp"
            android:text="Please Login"
            android:id="@+id/logintextid"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:textSize="27sp"

            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_above="@id/signupid">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emaillayout"
                app:hintEnabled="false">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailid"
                    android:hint="Email"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:background="@drawable/shape_edittext"
                    android:textColorHint="#D8757171"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordlayout"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_below="@+id/emaillayout"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordid"
                    android:hint="Password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:background="@drawable/shape_edittext"
                    android:textColorHint="#D8757171"
                    android:inputType="textPassword"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordlayout"
                android:layout_marginTop="40dp"
                android:text="Login"
                android:background="@drawable/shape_button01"
                android:textColor="@color/white"
                android:id="@+id/loginbtn"

                />



        </RelativeLayout>



    </ScrollView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or Register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:id="@+id/signupid"
        />

</RelativeLayout>