...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    android:id="@+id/homeactivityid"
    tools:context=".Home">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
...
